--- a/index_list/footer.html
+++ b/index_list/footer.html
@@ -2,7 +2,7 @@
 <footer>
     <div class="footer_link">
         <a href="#">關於我們</a>
-        <a href="#">商家入口</a>
+        <a href="restaurant_login.html">商家入口</a>
         <a href="#">常見問題</a>
         <a href="#">聯絡我們</a>
     </div>
