--- a/index_list/shoppingchar.html
+++ b/index_list/shoppingchar.html
@@ -59,12 +59,10 @@
 
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
-                                        name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
-                                        alt="">
+                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
                                     <span id="ordername" class="ordername">餐點名</span>
@@ -89,12 +87,10 @@
                             </tr>
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
-                                        name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail"
-                                        alt="">
+                                    <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
                                     <span id="ordername" class="ordername">餐點名</span>
@@ -119,12 +115,10 @@
 
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
-                                        name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail"
-                                        alt="">
+                                    <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
                                     <span id="ordername" class="ordername">餐點名</span>
@@ -150,12 +144,10 @@
 
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
-                                        name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
-                                        alt="">
+                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
                                 </td>
                                 <td>
                                     <span id="ordername" class="ordername">餐點名</span>
@@ -187,11 +179,9 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
-                                        name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
-                                            alt="">
+                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -208,11 +198,9 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
-                                        name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail"
-                                            alt="">
+                                        <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail" alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -229,11 +217,9 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
-                                        name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail"
-                                            alt="">
+                                        <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail" alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -250,11 +236,9 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
-                                        name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
-                                            alt="">
+                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -271,11 +255,9 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
-                                        name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
-                                            alt="">
+                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -305,9 +287,12 @@
                     <p>
                         <b>總金額(3個商品)$1234</b>
                     </p>
-                    <button class="buy-btn">
-                        <a href="shoppingok.html"><b>結帳</b></a>
-                    </button>
+                    <a href="shoppingok.html">
+                        <button class="buy-btn">
+                            <b>結帳</b>
+                        </button>
+                    </a>
+
                 </div>
             </div>
         </div>
