--- a/index_list/list_demo_kind.html
+++ b/index_list/list_demo_kind.html
@@ -125,20 +125,15 @@
 
                             <div class="chk_div dropdown_div">
                                 <div class="chk_css">
-                                    <input class="chk_item" type="checkbox" id="child_seats" name="child_seats"
-                                        value="2">
+                                    <input class="chk_item" type="checkbox" id="child_seats" name="child_seats" value="2">
                                     <label for="child_seats">提供兒童座椅</label>
-                                    <input class="chk_item" type="checkbox" id="barrier_free" name="barrier_free"
-                                        value="2">
+                                    <input class="chk_item" type="checkbox" id="barrier_free" name="barrier_free" value="2">
                                     <label for="barrier_free">無障礙設施</label>
-                                    <input class="chk_item" type="checkbox" id="min_consumption" name="min_consumption"
-                                        value="2">
+                                    <input class="chk_item" type="checkbox" id="min_consumption" name="min_consumption" value="2">
                                     <label for="min_consumption">最低消費限制</label>
-                                    <input class="chk_item" type="checkbox" id="limit_meal_time" name="limit_meal_time"
-                                        value="2">
+                                    <input class="chk_item" type="checkbox" id="limit_meal_time" name="limit_meal_time" value="2">
                                     <label for="limit_meal_time">限制用餐時間</label>
-                                    <input class="chk_item" type="checkbox" id="service_free" name="service_free"
-                                        value="2">
+                                    <input class="chk_item" type="checkbox" id="service_free" name="service_free" value="2">
                                     <label for="service_free">收取服務費</label>
                                     <input class="chk_item" type="checkbox" id="allow_pets" name="allow_pets" value="2">
                                     <label for="allow_pets">允許攜帶寵物</label>
@@ -175,13 +170,11 @@
                                 </div>
                                 <input class="search_keyword" id="keyword" type="text" placeholder="請輸入餐廳關鍵字">
                                 <div class="area_div">
-                                    <label for="area_btn" onclick="open_tab('area')"
-                                        class="area_label mobile_tab_label"><i class="fas fa-map-marker-alt"></i>請選擇地區<i
+                                    <label for="area_btn" onclick="open_tab('area')" class="area_label mobile_tab_label"><i class="fas fa-map-marker-alt"></i>請選擇地區<i
                                             class="fas fa-sort-down"></i></label>
                                 </div>
                                 <div class="other_div">
-                                    <label for="other_btn" onclick="open_tab('other')"
-                                        class="other_label mobile_tab_label"><i class="fas fa-hand-point-up"></i>進階搜尋<i
+                                    <label for="other_btn" onclick="open_tab('other')" class="other_label mobile_tab_label"><i class="fas fa-hand-point-up"></i>進階搜尋<i
                                             class="fas fa-sort-down"></i></label>
                                 </div>
                                 <div class="dropdown">
@@ -250,45 +243,37 @@
                             <div id="other" class="mobile_tab_div">
                                 <div class="mobile_chk_css">
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="child_seats"
-                                            id="child_seats" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="child_seats" id="child_seats" value="2">
                                         <label for="child_seats">提供兒童座椅</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="barrier_free"
-                                            id="barrier_free" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="barrier_free" id="barrier_free" value="2">
                                         <label for="barrier_free">無障礙設施</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="min_consumption"
-                                            id="min_consumption" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="min_consumption" id="min_consumption" value="2">
                                         <label for="min_consumption">最低消費限制</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="limit_meal_time"
-                                            id="limit_meal_time" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="limit_meal_time" id="limit_meal_time" value="2">
                                         <label for="limit_meal_time">限制用餐時間</label>
                                     </div>
                                 </div>
                                 <div class="mobile_chk_css">
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="delivery" id="delivery"
-                                            value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="delivery" id="delivery" value="2">
                                         <label for="delivery">提供外送</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="service_free"
-                                            id="service_free" value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="service_free" id="service_free" value="2">
                                         <label for="service_free">收取服務費</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="parking" id="parking"
-                                            value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="parking" id="parking" value="2">
                                         <label for="parking">附設停車場</label>
                                     </div>
                                     <div class="mobile_chk_item">
-                                        <input class="mobile_chk_chk" type="checkbox" name="allow_pets" id="allow_pets"
-                                            value="2">
+                                        <input class="mobile_chk_chk" type="checkbox" name="allow_pets" id="allow_pets" value="2">
                                         <label for="allow_pets">允許攜帶寵物</label>
                                     </div>
                                 </div>
@@ -312,7 +297,7 @@
                                     <span>義式料理</span>
                                     <h4>aqua水相餐廳</h4>
                                     <h5>台中市北屯區經貿三路二段100號</h5>
-                                    <span>4.7</span>
+                                    <span><i class="fa fa-star"></i> 4.9</span>
                                 </div>
                             </div>
                         </a>
@@ -325,7 +310,7 @@
                                     <span>義式料理</span>
                                     <h3>OGGI歐奇窯烤披薩</h3>
                                     <h4>台北市士林區德行西路19號</h4>
-                                    <span>4.5</span>
+                                    <span><i class="fa fa-star"></i> 4.3</span>
                                 </div>
                             </div>
                         </a>
@@ -342,30 +327,30 @@
     <!-- 頁尾 over -->
 
     <script>
-        $(document).ready(function () {
-            $(".dropdown_label").click(function (e) {
+        $(document).ready(function() {
+            $(".dropdown_label").click(function(e) {
                 e.preventDefault();
                 $(this).parent().find(".dropdown_div").slideToggle();
                 $(this).parent().siblings().find(".dropdown_div").slideUp();
             });
-            $(".tab_content span").click(function () {
+            $(".tab_content span").click(function() {
                 var text = $(this).text();
                 $(".area_label").html(`<i class="fas fa-map-marker-alt"></i>${text}`);
             });
-            $(".tab_close,.chk_close").click(function () {
+            $(".tab_close,.chk_close").click(function() {
                 $(".dropdown_div").slideUp();
             });
-            $(".search_mobile_div").click(function () {
+            $(".search_mobile_div").click(function() {
                 $(".mobile_div").css("display", "unset");
             });
-            $(".turn_off").click(function () {
+            $(".turn_off").click(function() {
                 $(".mobile_div").css("display", "none");
             });
-            $(".mobile_tab_content span").click(function () {
+            $(".mobile_tab_content span").click(function() {
                 var text = $(this).text();
                 $(".area_label").html(`<i class="fas fa-map-marker-alt"></i>${text}`);
             });
-            $(".mobile_dropdown_label").click(function (e) {
+            $(".mobile_dropdown_label").click(function(e) {
                 e.preventDefault();
                 $(this).parent().find(".mobile_dropdown_div").slideToggle();
                 $(this).parent().siblings().find(".mobile_dropdown_div").slideUp();
@@ -381,7 +366,6 @@
             }
             document.getElementById(tab_name).style.display = "block";
         }
-
     </script>
 </body>
 
