--- a/index_list/booking_check_page.html
+++ b/index_list/booking_check_page.html
@@ -40,7 +40,7 @@
                     <ul class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html"><span>首頁</span></a></li>
                         <li class="breadcrumb-item"><a href="list.html"><span>餐廳列表</span></a></li>
-                        <li class="breadcrumb-item"><a href="#restaurantName"><span>餐廳名稱</span></a></li>
+                        <li class="breadcrumb-item"><a href="restaurant_page_login_ok.html"><span>aqua 水相餐廳</span></a></li>
                         <li class="breadcrumb-item active" aria-current="page"><span>訂位</span></li>
                     </ul>
                 </nav>
@@ -64,27 +64,27 @@
                             <form action="#">
                                 <div class="form_container_check">
                                     <label for="check_person_name">姓　　名：</label>
-                                    <label for="check_person_name">XXX</label>
+                                    <label for="check_person_name">李曉明</label>
                                 </div>
                                 <div class="form_container_check">
                                     <label for="check_person_cellphone">手　　機：</label>
-                                    <label for="check_person_cellphone">09XX-XXX-XXX</label>
+                                    <label for="check_person_cellphone">0987654321</label>
                                 </div>
                                 <div class="form_container_check">
                                     <label for="check_person_email">姓　　名：</label>
-                                    <label for="check_person_email">your_email@gmail.com</label>
+                                    <label for="check_person_email">askf@gmail.com</label>
                                 </div>
                                 <div class="form_container_check">
                                     <label for="check_person_person_number">訂位人數：</label>
-                                    <label for="check_person_person_number">3人</label>
+                                    <label for="check_person_person_number">6人</label>
                                 </div>
                                 <div class="form_container_check">
                                     <label for="check_person_date">訂位日期：</label>
-                                    <label for="check_person_date">2022/02/10(四)</label>
+                                    <label for="check_person_date">2022/03/18</label>
                                 </div>
                                 <div class="form_container_check">
                                     <label for="check_person_time">訂位時間：</label>
-                                    <label for="check_person_time">19：00</label>
+                                    <label for="check_person_time">17：00</label>
                                 </div>
                                 <div class="form_container_check">
                                     <label for="check_person_demands">需　　求：</label>
@@ -92,7 +92,7 @@
                                 </div>
                                 <div class="form_container_check">
                                     <label for="check_person_remark">備　　註：</label>
-                                    <label for="check_person_remark">XXX</label>
+                                    <label for="check_person_remark">無</label>
                                 </div>
                             </form>
                         </div>
