--- a/index_list/member_login_ok.html
+++ b/index_list/member_login_ok.html
@@ -25,23 +25,12 @@
 </head>
 
 <body>
-    <!-- 導覽列 start -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" /></a>
-            <div class="nav_icon">
-                <a class="nav_a" href="list.html"><i class="fas fa-store"></i>餐廳列表</a>
-                <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i>購物車</a>
-                <a class="nav_a" href="member_login.html"><i class="fas fa-user-circle"></i>會員登入</a>
-            </div>
-            <div class="rwd_icon">
-                <a class="nav_a" href="list.html"><i class="fas fa-store"></i></a>
-                <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i></a>
-                <a class="nav_a" href="member_login.html"><i class="fas fa-user-circle"></i></a>
-            </div>
-        </nav>
-    </header>
-    <!-- 導覽列 end -->
+
+    <!-- header start -->
+
+    <div class="header_page"></div>
+
+    <!-- header over -->
 
 
     <div class="container">
@@ -54,7 +43,7 @@
                     <form action="#">
                         <div class="form-group row">
                             <label for="account" class="form_account"></label>
-                            <input type="text" id="account" class="form_account" placeholder="請輸入您的帳號" />
+                            <input type="text" id="account" class="form_account" value="李曉明" placeholder="請輸入您的帳號" />
                         </div>
                         <div class="form-group row">
                             <label for="secret" class="form_secret"></label>
