--- a/index_list/member_register_success.html
+++ b/index_list/member_register_success.html
@@ -54,7 +54,7 @@
       });
 
       function countDown() {
-        setTimeout("location.href='./member_login.html'", 1500);
+        setTimeout("location.href='./member_login_ok.html'", 1500);
       }
 
       countDown();
