--- a/index_list/booking_finish_page.html
+++ b/index_list/booking_finish_page.html
@@ -39,7 +39,7 @@
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html"><span>首頁</span></a></li>
                     <li class="breadcrumb-item"><a href="list.html"><span>餐廳列表</span></a></li>
-                    <li class="breadcrumb-item"><a href="#restaurantName"><span>餐廳名稱</span></a></li>
+                    <li class="breadcrumb-item"><a href="restaurant_page_login_ok.html"><span>aqua 水相餐廳</span></a></li>
                     <li class="breadcrumb-item active" aria-current="page"><span>訂位</span></li>
                 </ul>
             </nav>
@@ -59,35 +59,35 @@
             <div class="finish_container">
                 <div class="finish_person">
                     <div class="finish_form_title">訂位已完成</div>
-                    <div class="finish_form_show"><b>您的訂位編號：<span>00001</span></b></div>
+                    <div class="finish_form_show">您的訂位編號：<span>00001</span></div>
                     <div class="form_container_finish_wrapper">
                         <form action="#">
                             <div class="form_container_finish_wrapper_left">
                                 <div class="form_container_finish">
                                     <label for="finish_person_name">姓　　名：</label>
-                                    <label for="finish_person_name">XXX</label>
+                                    <label for="finish_person_name">李曉明</label>
                                 </div>
                                 <div class="form_container_finish">
                                     <label for="finish_person_cellphone">手　　機：</label>
-                                    <label for="finish_person_cellphone">09XX-XXX-XXX</label>
+                                    <label for="finish_person_cellphone">0987654321</label>
                                 </div>
                                 <div class="form_container_finish">
                                     <label for="finish_person_email">姓　　名：</label>
-                                    <label for="finish_person_email">your_email@gmail.com</label>
+                                    <label for="finish_person_email">askf@gmail.com</label>
                                 </div>
                             </div>
                             <div class="form_container_finish_wrapper_right">
                                 <div class="form_container_finish">
                                     <label for="finish_person_person_number">訂位人數：</label>
-                                    <label for="finish_person_person_number">3人</label>
+                                    <label for="finish_person_person_number">6人</label>
                                 </div>
                                 <div class="form_container_finish">
                                     <label for="finish_person_date">訂位日期：</label>
-                                    <label for="finish_person_date">2022/02/10(四)</label>
+                                    <label for="finish_person_date">2022/03/18</label>
                                 </div>                            
                                 <div class="form_container_finish">
                                     <label for="finish_person_time">訂位時間：</label>
-                                    <label for="finish_person_time">19：00</label>
+                                    <label for="finish_person_time">17：00</label>
                                 </div>                            
                                 <div class="form_container_finish">
                                     <label for="finish_person_demands">需　　求：</label>
@@ -95,7 +95,7 @@
                                 </div>                            
                                 <div class="form_container_finish">
                                     <label for="finish_person_remark">備　　註：</label>
-                                    <label for="finish_person_remark">XXX</label>
+                                    <label for="finish_person_remark">無</label>
                                 </div>
                             </div>
                         </form>
@@ -103,6 +103,9 @@
                     <div class="btn_container_finish">
                         <a href="/index_list/booking_manage.html">
                             <input type="submit" class="finish_btn_booking_manage" value="訂位管理" />      
+                        </a>
+                        <a href="/index_list/restaurant_page_login_ok.html">
+                            <input type="submit" class="finish_btn_to_restaurant_page" value="我要訂餐" />      
                         </a>
                         <a href="/index_list/index.html">
                             <input type="submit" class="finish_btn_back_to_index" value="回首頁" />
