--- a/index_list/member_register_ok.html
+++ b/index_list/member_register_ok.html
@@ -22,22 +22,10 @@
 
   <body>
     <!-- 導覽列 start -->
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" /></a>
-          <div class="nav_icon">
-            <a class="nav_a" href="list.html"><i class="fas fa-store"></i>餐廳列表</a>
-            <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i>購物車</a>
-            <a class="nav_a" href="member_login.html"><i class="fas fa-user-circle"></i>會員登入</a>
-          </div>
-          <div class="rwd_icon">
-            <a class="nav_a" href="list.html"><i class="fas fa-store"></i></a>
-            <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i></a>
-            <a class="nav_a" href="member_login.html"><i class="fas fa-user-circle"></i></a>
-          </div>
-      </nav>
-    </header>
-    <!-- 導覽列 end -->
+
+    <div class="header_page"></div>
+
+    <!-- 導覽列 over -->
 
     <div class="container">
       <div class="row">
@@ -52,7 +40,7 @@
               <div class="form-group row">
                 <label for="name" class="form_text">姓名</label>
                 <div class="input_box">
-                  <input type="text" id="name" class="form-control" value="李曉明" />
+                  <input type="text" id="name" class="form-control" />
                 </div>
               </div>
               <div class="form-group row">
@@ -63,7 +51,6 @@
                     id="email"
                     class="form-control"
                     name="email"
-                    value="askf@gmail.com"
                   />
                 </div>
               </div>
@@ -76,7 +63,6 @@
                     id="password"
                     class="form-control"
                     name="password"
-                    value="0000"
                   />
                 </div>
               </div>
@@ -89,7 +75,6 @@
                     id="password_confirm"
                     class="form-control"
                     name="password_confirm"
-                    value="0000"
                   />
                 </div>
               </div>
@@ -97,7 +82,7 @@
               <div class="form-group row">
                 <label for="phone_number" class="form_text">手機</label>
                 <div class="input_box">
-                  <input type="text" id="phone_number" class="form-control" value="0987654321" />
+                  <input type="text" id="phone_number" class="form-control" />
                 </div>
               </div>
               <div class="btn_div">
